--- a/appsettings.json
+++ b/appsettings.json
@@ -24,7 +24,11 @@
   },
   "Blog": {
     "Author": [
-
+      {
+        "name": "yomunsam",
+        "display": "yomunsam",
+        "head": "img/head.jpg"
+      }
     ],
     "Category": [
 
