--- a/appsettings.json
+++ b/appsettings.json
@@ -14,12 +14,13 @@
       "img/banner/8.jpg",
       "img/banner/9.jpg"
     ],
-    "DefalutThumbnails":[
+    "DefalutThumbnails": [
       "img/thumbnail/1.jpg",
       "img/thumbnail/2.jpg",
       "img/thumbnail/3.jpg",
       "img/thumbnail/4.jpg",
-      "img/thumbnail/5.jpg"
+      "img/thumbnail/5.jpg",
+      "img/thumbnail/6_s.jpg"
     ]
   },
   "Blog": {
