--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Takina.WebPage",
-  "short_name": "Takina.WebPage",
+  "name": "有木酱的小屋",
+  "short_name": "YMC House",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
